samples/_failures_safe/1761476506_8132f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3474b448.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_3474b448.c:128:5: error: expected expression at end of input
  128 |     if (strlen(filename) == 0) return
      |     ^~
./samples/SAFE/__tmp_3474b448.c:128:5: error: expected declaration or statement at end of input
